2004-09-13  Sam Steingold  <sds@gnu.org>

	* runprog.lisp (run-shell-command) [win32]: :INDIRECTP defaults to T
	Reported by Jörg Höhle

2004-09-13  Sam Steingold  <sds@gnu.org>

	* makemake.in (cross/LPARS, full-check):
	make sure that ${someflags} is expanded
	Reported by Jörg Höhle

2004-09-13  Bruno Haible  <bruno@clisp.org>

	* clos-class3.lisp (defclass): Pass the metaclass' default-initargs to
	ensure-class.
	* clos-genfun3.lisp (defgeneric): Pass the generic-function class'
	default-initargs to ensure-generic-function.
	Reported by Pascal Costanza.

2004-08-01  Bruno Haible  <bruno@clisp.org>

	* clos-slotdef1.lisp (<effective-slot-definition>): New variable.
	(effective-slot-definition-p): New function.
	* clos-class3.lisp (compute-slots-<class>-primary): Check the return
	value of compute-effective-slot-definition.

2004-07-30  Bruno Haible  <bruno@clisp.org>

	* clos-genfun2.lisp (compute-applicable-methods-effective-method):
	Check the return value from compute-applicable-methods-using-classes or
	compute-applicable-methods.

2004-07-30  Bruno Haible  <bruno@clisp.org>

	* clos-genfun2.lisp (shared-initialize-<standard-generic-function>):
	Clear the cache also when unknown user-defined arguments are passed.
	(install-dispatch): Check the return value from
	compute-discriminating-function.

2004-07-29  Bruno Haible  <bruno@clisp.org>

	Implement the dependents protocol.
	* lispbibl.d (Class): Add field 'listeners'.
	* init.lisp: Export add-dependent, remove-dependent, map-dependents,
	update-dependent.
	* clos-package.lisp: Export add-dependent, remove-dependent,
	map-dependents, update-dependent.
	* clos-class1.lisp (class): Add slot 'listeners'.
	(*<...class>-...-location*): Update.
	(*<...class>-instance-size*): Increment.
	(class-listeners, (setf class-listeners)): New functions.
	(shared-initialize-<class>): Initialize the listeners.
	* clos-class3.lisp (reinitialize-instance-<class>): Invoke
	map-dependents.
	(map-dependents-<class>): New function.